--- a/blog1-website/_site.yml
+++ b/blog1-website/_site.yml
@@ -10,6 +10,6 @@ navbar:
       href: index.html
     - text: "Analysis"
       href: analysis.html
-    - text: "About"
+    - text: "Reference"
       href: about.html
 output: distill::distill_article
