--- a/blog1-website/_site.yml
+++ b/blog1-website/_site.yml
@@ -12,4 +12,6 @@ navbar:
       href: analysis.html
     - text: "Reference"
       href: about.html
+    - icon: fab fa-github
+      href: https://github.com/rstudio/distill
 output: distill::distill_article
